fix outline scrolling with body overflow hidden

--- a/src/css/outline_block.css.scss
+++ b/src/css/outline_block.css.scss
@@ -2,16 +2,14 @@
 
 .outline__container {
   display: flex;
-  // overflow: auto;
-  // width: 100vw;
-  // height: calc(100% - 105px);
-  // position: absolute;
+  overflow: auto;
+  width: 100vw;
+  height: calc(100% - 105px);
+  position: absolute;
 }
 
 .outline__scenes-container {
   width: 80%;
-  // height: 100%;
-  // overflow: auto;
 }
 
 .filter-list__list li {
